--- a/blendertutorial.html
+++ b/blendertutorial.html
@@ -202,6 +202,21 @@
   a:active {
     color:#dcdcdc;
   }
+
+  .p-page-title {
+    font-family: "Heroic",Arial Narrow,Helvetica,sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    letter-spacing: .05em;
+    line-height: normal;
+    text-transform: uppercase;
+    border-bottom: 5px solid;
+    border-color: #EFEFF0;
+    margin: 16px 0;
+    padding-bottom: 8px;
+    text-align: center;
+  }
+
 </style>
 
 
@@ -220,20 +235,36 @@
 
 
 
-      <h4 style="align-items: left; color:#009694" text="Fixing the MoneyCat">Fixing the Japenses Maneki-neko (MoneyCat)</h4>
-      <img src="img/cat2.jpg" style="width: 95vh; padding-bottom: 2%">
-      <p style="align-items: center">The Japenses Maneki-neko is a figurine which is often believed to bring good luck to the owner.</p>
-      <p>I found this Maneki at my local Chinese resturant. When I asked about it we realized this Maneki-neko was broken! This brought a smile to my face and I had to take her home to get fixed.</p>
-      <img src="img/cat.jpg" style="width: 85vh; padding-bottom: 2%">
-      <img src="img/cat1.jpg" style="width: 85vh; padding-bottom: 2%">
-      <p>After opening her up I was amazed at the simplicity. She is almost designed like a clock or what a clock looks like before a clock was a clock, the coil was cut! carefully unwinding a bit of the coil and soldering it back brought her back to life! These make the perfect beginner project to electronics, which makes the perfect beginners project.</p>
+      <h4 style="color:#ff6400" text="Fixing the MoneyCat">A Greek Column in Blender, Tips to get you started and Why I love Blender so much</h4>
+      <p></p>
+      <h1 class="p-page-title"></h1>
+      <img src="https://live.staticflickr.com/65535/51501480448_c26510edc1_k.jpg" style="width: 95vh; padding-bottom: 2%">
+      <p style="align-items: center">Blender is the free and open source 3D creation suite. It supports the entirety of the 3D pipeline—modeling, rigging, animation, simulation, rendering, compositing and motion tracking, video editing and 2D animation pipeline.</p>
+      <p>Modeling in 3D has always fascinated me, and over the last two years I've spent more and more time working on environments. Many people have expressed interest and now with this platform
+        I'd like to show off my first tutoiral. Maybe this will reach someone to start a new journey into 3d</p>
+<!--      <img src="img/cat.jpg" style="width: 85vh; padding-bottom: 2%">-->
 
-      <!--                    <img th:src="${usersPost.getOwnerUser().originalavatar}" style="height: 20px; width: 20px;">-->
+      <h1 style="color:#54b686">setup</h1>
+      <img src="/img/blenderstart.png" style="width: 95vh; padding-bottom: 2%">
+      <p>
 
-      <!--      <a th:href="'/i/' + ${usersPost.getOwner().username}">-->
-      <!--      <a style="font-family:lato"><b>Timothy Lefkowitz</b>-->
-      <!--        <img src="img/cat2.jpg" style="height: 32px; width: 32px;">-->
-      <h6 style="align-items: center" text=""></h6></a>
+              Setup is easy, Head to the download page <a href="https://www.blender.org/download/" style="color: #00b1ae">here</a> and grab the installer for your OS
+      <p>
+          Once installed you will be greeted with a cube. Almost anything can be made from this cube! There are a few things I would do
+      to get you started.
+      <li>Make sure you can control the Camera</li> In my case, I pick a mouse button that I don't use and assign that to the camera. Open Preferences > Select Keymap > Search for Camera > find View Camera. From here assign this to a button you like.
+      <img src="/img/changeCamera.jpeg" style="width: 95vh; padding-bottom: 2%; padding-top: 2%">
+
+      <li>Next, get familiar with the object properties pane. Once you select the camera and select the object properties. This is where you can move not just the camera but any other object, vertice or face</li>
+      <img src="/img/xyzControl.jpeg" style="width: 55vh; padding-bottom: 2%; padding-top: 2%">
+      </p>
+
+
+      <h1 style="color:#54b686">lets create!</h1>
+      <p> I can ramble on and on with setup but lets go ahead and start building. First, You can make almost anything from a cube. My best friends in blender are the X, Y and Z Axis</p>
+      <p>Let's select the cube, hit tab to go into edit mode and hit s to go into scale mode. Once in scale mode we can hit z to scale along the z axis</p>
+
+
     </div>
 
 
