--- a/blendertutorial.html
+++ b/blendertutorial.html
@@ -245,7 +245,7 @@
 <!--      <img src="img/cat.jpg" style="width: 85vh; padding-bottom: 2%">-->
 
       <h1 style="color:#54b686">setup</h1>
-      <img src="/img/blenderstart.png" style="width: 95vh; padding-bottom: 2%">
+      <img src="img/blenderstart.png" style="width: 95vh; padding-bottom: 2%">
       <p>
 
               Setup is easy, Head to the download page <a href="https://www.blender.org/download/" style="color: #00b1ae">here</a> and grab the installer for your OS
@@ -253,10 +253,10 @@
           Once installed you will be greeted with a cube. Almost anything can be made from this cube! There are a few things I would do
       to get you started.
       <li>Make sure you can control the Camera</li> In my case, I pick a mouse button that I don't use and assign that to the camera. Open Preferences > Select Keymap > Search for Camera > find View Camera. From here assign this to a button you like.
-      <img src="/img/changeCamera.jpeg" style="width: 95vh; padding-bottom: 2%; padding-top: 2%">
+      <img src="img/changeCamera.jpeg" style="width: 95vh; padding-bottom: 2%; padding-top: 2%">
 
       <li>Next, get familiar with the object properties pane. Once you select the camera and select the object properties. This is where you can move not just the camera but any other object, vertice or face</li>
-      <img src="/img/xyzControl.jpeg" style="width: 55vh; padding-bottom: 2%; padding-top: 2%">
+      <img src="img/xyzControl.jpeg" style="width: 55vh; padding-bottom: 2%; padding-top: 2%">
       </p>
 
 
@@ -264,26 +264,26 @@
       <p> I can ramble on and on with setup but lets go ahead and start building. First, You can make almost anything from a cube. My best friends in blender are the X, Y and Z Axis</p>
 
 
-      <img src="/img/cubetut1.png" style="width: 95vh; padding-bottom: 2%; padding-top: 2%">
+      <img src="img/cubetut1.png" style="width: 95vh; padding-bottom: 2%; padding-top: 2%">
       <p>Let's select the cube, hit tab to go into edit mode and hit s to go into scale mode. Once in scale mode we can hit Z to scale along the Z axis. This is how we can go from a cube to a foundation stone! </p>
       <p>This is my favorite way to scale Meshes. Meshes are what we call the objects we are forming. You can also scale along the X and Y axis. It truely is amazing all the things you can create just by taking an object and scaling it</p>
       <p>Now, Har. YAAAA.  Here are two tools that fight for second place. insert and extrude. As you see here when we select a face and press i for insert. We get a new box within the face. We can shrink this to our liking</p>
 
       <p>Once we have a good size we can press E to extrude the center face. This pushes the selected face out or in. We can do so much with this!</p>
-      <img src="/img/cubetut2.png" style="width: 95vh; padding-bottom: 2%; padding-top: 2%">
+      <img src="img/cubetut2.png" style="width: 95vh; padding-bottom: 2%; padding-top: 2%">
 
-      <img src="/img/cubetut3.png" style="width: 95vh; padding-bottom: 2%; padding-top: 2%">
+      <img src="img/cubetut3.png" style="width: 95vh; padding-bottom: 2%; padding-top: 2%">
       <p>Now we can add new objects by pressing Shift + A. Select Mesh > cylinder</p>
       <a>a new cylinder appears! Lets sretch it with our scaling tools. Select the object, Press S. Then hit Z and move your mouse up to have it grow to your liking </a>
       <a>Now for one of the last steps, Let's select every other face on the side of the column. Once every other face is selected we can bring them in with extrude E</a>
 
 <!--      <img src="/img/column3.png" style="width: 95vh; padding-bottom: 2%; padding-top: 2%">-->
 
-      <img src="/img/column4.png" style="width: 95vh; padding-bottom: 2%; padding-top: 2%">
+      <img src="img/column4.png" style="width: 95vh; padding-bottom: 2%; padding-top: 2%">
 
-      <img src="/img/Column2.png" style="width: 95vh; padding-bottom: 2%; padding-top: 2%">
+      <img src="img/Column2.png" style="width: 95vh; padding-bottom: 2%; padding-top: 2%">
 
-      <img src="/img/columsFinished.png" style="width: 95vh; padding-bottom: 2%; padding-top: 2%">
+      <img src="img/columsFinished.png" style="width: 95vh; padding-bottom: 2%; padding-top: 2%">
 
       <a>Then all we have to do is recreate the bottom peice for the top :) </a>
       <a>small details make a huge differance</a>
