--- a/3d.html
+++ b/3d.html
@@ -63,18 +63,17 @@
 <!--<body style="background: linear-gradient(to left, #00AAFF, #00FF6c)";>-->
 
 
-
 <!-- Navbar -->
 <nav class="fixed-left navbar navbar-expand-lg navbar-dark bg-dark ">
     <!-- Container wrapper -->
     <div class="container">
         <!-- Navbar brand -->
-        <a class="navbar-brand" href="/home">
+        <a class="navbar-brand" href="home.html">
             <!--            <img th:src="@{/users/avatars/BlueSphere1.2.gif}" width="50" height="50" class="d-inline-block align-top" alt=""/>-->
             <img src="https://live.staticflickr.com/65535/51369056853_85ef692ae7_o.gif" width="50" height="50" class="d-inline-block align-top" alt="">
         </a>
 
-        <a class="navbar-brand me-2" href="/home.html">
+        <a class="navbar-brand me-2" href="home.html">
             PHOTONs
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -127,9 +126,6 @@
                 <li class="nav-item">
                     <a class="nav-link" href="aboutme.html">about me</a>
                 </li>
-                <li>
-                    <a class="nav-link" id="clock" style="color:#00b1ae">01:20am</a>
-                </li>
             </ul>
 
 
@@ -161,10 +157,13 @@
                     <!--                            <button class="btn-link btn" style="text-decoration: none; color:#00b1ae">logout</button>-->
                     <!--                        </form>-->
                     <!--                    </li>-->
+                    <li class="nav-item">
+                        <a class="nav-link" href="blog.html" style="color:#00b1ae">blog</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" id="clock" style="color:#00b1ae">01:20am</a>
+                    </li>
                 </ul>
-
-
-
             </div>
         </div>
         <!-- Collapsible wrapper -->
@@ -172,6 +171,7 @@
     <!-- Container wrapper -->
 </nav>
 <!-- END OF NAVBAR     -->
+
 
 
 
