--- a/flickarchive.html
+++ b/flickarchive.html
@@ -129,9 +129,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="aboutme.html">about me</a>
                 </li>
-                <li>
-                    <a class="nav-link" id="clock" style="color:#00b1ae">01:20am</a>
-                </li>
+
 
 
             </ul>
@@ -139,32 +137,38 @@
 
             <!-- Left links -->
 
-            <div class="d-flex align-items-center">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <!--                    <li class="nav-item">-->
-                    <!--                        <a class="nav-link" href="post">post</a>-->
-                    <!--                    </li>-->
-                    <!--                    <li class="nav-item">-->
-                    <!--                        <a class="nav-link" th:action="@{/logout}" th:method="post" th:href="logout">logout</a>-->
-                    <!--                    </li>-->
+            <div class="d-flex align-items-center me-auto justify-content-end">
+                <ul class="navbar-nav me-auto mb-lg-0">
+<!--                                        <li class="nav-item">-->
+<!--                                            <a class="nav-link" href="post">post</a>-->
+<!--                                        </li>-->
+<!--                                        <li class="nav-item">-->
+<!--                                            <a class="nav-link" th:action="@{/logout}" th:method="post" th:href="logout">logout</a>-->
+<!--                                        </li>-->
 
-                    <!--                    <li class="nav-item">-->
-                    <!--&lt;!&ndash;                         <a&ndash;&gt;-->
-                    <!--&lt;!&ndash;                        class="btn btn-dark px-3 material-icons-outlined"&ndash;&gt;-->
-                    <!--&lt;!&ndash;                        href="myprofile"&ndash;&gt;-->
-                    <!--&lt;!&ndash;                        role="button">&ndash;&gt;-->
+                                        <li class="nav-item">
+                    <!--                         <a-->
+                    <!--                        class="btn btn-dark px-3 material-icons-outlined"-->
+                    <!--                        href="myprofile"-->
+                    <!--                        role="button">-->
 
-                    <!--&lt;!&ndash;                             <i class="material-icons" style="font-size:14px;">account_circle</i>&ndash;&gt;-->
-                    <!--&lt;!&ndash;                         </a>&ndash;&gt;-->
-                    <!--                    </li>-->
+                    <!--                             <i class="material-icons" style="font-size:14px;">account_circle</i>-->
+                    <!--                         </a>-->
+                                        </li>
 
-                    <!-- More links here... -->
-                    <!-- More links here... -->
-                    <!--                    <li class="nav-item">-->
-                    <!--                        <form th:action="@{/logout}" th:method="post">-->
-                    <!--                            <button class="btn-link btn" style="text-decoration: none; color:#00b1ae">logout</button>-->
-                    <!--                        </form>-->
-                    <!--                    </li>-->
+<!--                                        <li class="nav-item">-->
+<!--                                            <form th:action="@{/logout}" th:method="post">-->
+<!--                                                <button class="btn-link btn" style="text-decoration: none; color:#00b1ae">logout</button>-->
+<!--                                            </form>-->
+<!--                                        </li>-->
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="blog.html">Blog</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" id="clock" style="color:#00b1ae">01:20am</a>
+                    </li>
+
                 </ul>
 
 
@@ -281,7 +285,7 @@
 <!-- updated master scripts  -->
 
 <!--&lt;!&ndash; Latest compiled JavaScript &ndash;&gt;-->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+<!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>-->
 
 <!-- jQuery library -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
