--- a/blendertutorial.html
+++ b/blendertutorial.html
@@ -63,7 +63,6 @@
 <!--<body style="background: linear-gradient(to left, #00AAFF, #00FF6c)";>-->
 
 
-
 <!-- Navbar -->
 <nav class="fixed-left navbar navbar-expand-lg navbar-dark bg-dark ">
   <!-- Container wrapper -->
@@ -127,6 +126,7 @@
         <li class="nav-item">
           <a class="nav-link" href="aboutme.html">about me</a>
         </li>
+
       </ul>
 
 
@@ -158,10 +158,13 @@
           <!--                            <button class="btn-link btn" style="text-decoration: none; color:#00b1ae">logout</button>-->
           <!--                        </form>-->
           <!--                    </li>-->
+          <li class="nav-item">
+            <a class="nav-link" href="blog.html" style="color:#00b1ae">blog</a>
+          </li>
+          <li>
+            <a class="nav-link" id="clock" style="color:#00b1ae">01:20am</a>
+          </li>
         </ul>
-
-
-
       </div>
     </div>
     <!-- Collapsible wrapper -->
