--- a/blog.html
+++ b/blog.html
@@ -60,6 +60,7 @@
 
 
 
+
 <!-- Navbar -->
 <nav class="fixed-left navbar navbar-expand-lg navbar-dark bg-dark ">
   <!-- Container wrapper -->
@@ -123,6 +124,7 @@
         <li class="nav-item">
           <a class="nav-link" href="aboutme.html">about me</a>
         </li>
+
       </ul>
 
 
@@ -130,14 +132,37 @@
 
       <div class="d-flex align-items-center">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <!--                    <li class="nav-item">-->
+          <!--                        <a class="nav-link" href="post">post</a>-->
+          <!--                    </li>-->
+          <!--                    <li class="nav-item">-->
+          <!--                        <a class="nav-link" th:action="@{/logout}" th:method="post" th:href="logout">logout</a>-->
+          <!--                    </li>-->
+
+          <!--                    <li class="nav-item">-->
+          <!--&lt;!&ndash;                         <a&ndash;&gt;-->
+          <!--&lt;!&ndash;                        class="btn btn-dark px-3 material-icons-outlined"&ndash;&gt;-->
+          <!--&lt;!&ndash;                        href="myprofile"&ndash;&gt;-->
+          <!--&lt;!&ndash;                        role="button">&ndash;&gt;-->
+
+          <!--&lt;!&ndash;                             <i class="material-icons" style="font-size:14px;">account_circle</i>&ndash;&gt;-->
+          <!--&lt;!&ndash;                         </a>&ndash;&gt;-->
+          <!--                    </li>-->
+
+          <!-- More links here... -->
+          <!-- More links here... -->
+          <!--                    <li class="nav-item">-->
+          <!--                        <form th:action="@{/logout}" th:method="post">-->
+          <!--                            <button class="btn-link btn" style="text-decoration: none; color:#00b1ae">logout</button>-->
+          <!--                        </form>-->
+          <!--                    </li>-->
+          <li class="nav-item">
+            <a class="nav-link" href="blog.html" style="color:#00b1ae">blog</a>
+          </li>
           <li>
             <a class="nav-link" id="clock" style="color:#00b1ae">01:20am</a>
           </li>
-
         </ul>
-
-
-
       </div>
     </div>
     <!-- Collapsible wrapper -->
@@ -145,6 +170,7 @@
   <!-- Container wrapper -->
 </nav>
 <!-- END OF NAVBAR     -->
+
 
 
 
