--- a/flickarchive.html
+++ b/flickarchive.html
@@ -66,18 +66,19 @@
     }
 </style>
 
+
 <!-- Navbar -->
 <nav class="fixed-left navbar navbar-expand-lg navbar-dark bg-dark ">
     <!-- Container wrapper -->
     <div class="container">
         <!-- Navbar brand -->
-        <a class="navbar-brand" href="home.html">
+        <a class="navbar-brand" href="/home">
             <!--            <img th:src="@{/users/avatars/BlueSphere1.2.gif}" width="50" height="50" class="d-inline-block align-top" alt=""/>-->
             <img src="https://live.staticflickr.com/65535/51369056853_85ef692ae7_o.gif" width="50" height="50" class="d-inline-block align-top" alt="">
         </a>
 
-        <a class="navbar-brand me-2" href="home.html">
-            PHOTONs
+        <a class="navbar-brand me-2" href="/home.html">
+            PHOTONS
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -130,49 +131,44 @@
                     <a class="nav-link" href="aboutme.html">about me</a>
                 </li>
 
-
-
             </ul>
 
 
             <!-- Left links -->
 
-            <div class="d-flex align-items-center me-auto justify-content-end">
-                <ul class="navbar-nav me-auto mb-lg-0">
-<!--                                        <li class="nav-item">-->
-<!--                                            <a class="nav-link" href="post">post</a>-->
-<!--                                        </li>-->
-<!--                                        <li class="nav-item">-->
-<!--                                            <a class="nav-link" th:action="@{/logout}" th:method="post" th:href="logout">logout</a>-->
-<!--                                        </li>-->
+            <div class="d-flex align-items-center">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <!--                    <li class="nav-item">-->
+                    <!--                        <a class="nav-link" href="post">post</a>-->
+                    <!--                    </li>-->
+                    <!--                    <li class="nav-item">-->
+                    <!--                        <a class="nav-link" th:action="@{/logout}" th:method="post" th:href="logout">logout</a>-->
+                    <!--                    </li>-->
 
-                                        <li class="nav-item">
-                    <!--                         <a-->
-                    <!--                        class="btn btn-dark px-3 material-icons-outlined"-->
-                    <!--                        href="myprofile"-->
-                    <!--                        role="button">-->
+                    <!--                    <li class="nav-item">-->
+                    <!--&lt;!&ndash;                         <a&ndash;&gt;-->
+                    <!--&lt;!&ndash;                        class="btn btn-dark px-3 material-icons-outlined"&ndash;&gt;-->
+                    <!--&lt;!&ndash;                        href="myprofile"&ndash;&gt;-->
+                    <!--&lt;!&ndash;                        role="button">&ndash;&gt;-->
 
-                    <!--                             <i class="material-icons" style="font-size:14px;">account_circle</i>-->
-                    <!--                         </a>-->
-                                        </li>
+                    <!--&lt;!&ndash;                             <i class="material-icons" style="font-size:14px;">account_circle</i>&ndash;&gt;-->
+                    <!--&lt;!&ndash;                         </a>&ndash;&gt;-->
+                    <!--                    </li>-->
 
-<!--                                        <li class="nav-item">-->
-<!--                                            <form th:action="@{/logout}" th:method="post">-->
-<!--                                                <button class="btn-link btn" style="text-decoration: none; color:#00b1ae">logout</button>-->
-<!--                                            </form>-->
-<!--                                        </li>-->
-
+                    <!-- More links here... -->
+                    <!-- More links here... -->
+                    <!--                    <li class="nav-item">-->
+                    <!--                        <form th:action="@{/logout}" th:method="post">-->
+                    <!--                            <button class="btn-link btn" style="text-decoration: none; color:#00b1ae">logout</button>-->
+                    <!--                        </form>-->
+                    <!--                    </li>-->
                     <li class="nav-item">
-                        <a class="nav-link" href="blog.html">Blog</a>
+                        <a class="nav-link" href="blog.html" style="color:#00b1ae">blog</a>
                     </li>
                     <li>
                         <a class="nav-link" id="clock" style="color:#00b1ae">01:20am</a>
                     </li>
-
                 </ul>
-
-
-
             </div>
         </div>
         <!-- Collapsible wrapper -->
@@ -180,6 +176,7 @@
     <!-- Container wrapper -->
 </nav>
 <!-- END OF NAVBAR     -->
+
 
 <!-- Media panel -->
 <!--<div class="container d-flex justify-content-center mediacontainer ">-->
