--- a/foods.html
+++ b/foods.html
@@ -79,19 +79,18 @@
 <script src="js/keys.js"></script>
 
 <body>
-<!-- NAV BAR -->
 <!-- Navbar -->
 <nav class="fixed-left navbar navbar-expand-lg navbar-dark bg-dark ">
     <!-- Container wrapper -->
     <div class="container">
         <!-- Navbar brand -->
-        <a class="navbar-brand" href="home.html">
+        <a class="navbar-brand" href="/home">
             <!--            <img th:src="@{/users/avatars/BlueSphere1.2.gif}" width="50" height="50" class="d-inline-block align-top" alt=""/>-->
             <img src="https://live.staticflickr.com/65535/51369056853_85ef692ae7_o.gif" width="50" height="50" class="d-inline-block align-top" alt="">
         </a>
 
-        <a class="navbar-brand me-2" href="home.html">
-            PHOTONs
+        <a class="navbar-brand me-2" href="/home.html">
+            PHOTONS
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -143,6 +142,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="aboutme.html">about me</a>
                 </li>
+
             </ul>
 
 
@@ -174,10 +174,13 @@
                     <!--                            <button class="btn-link btn" style="text-decoration: none; color:#00b1ae">logout</button>-->
                     <!--                        </form>-->
                     <!--                    </li>-->
+                    <li class="nav-item">
+                        <a class="nav-link" href="blog.html" style="color:#00b1ae">blog</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" id="clock" style="color:#00b1ae">01:20am</a>
+                    </li>
                 </ul>
-
-
-
             </div>
         </div>
         <!-- Collapsible wrapper -->
@@ -185,6 +188,7 @@
     <!-- Container wrapper -->
 </nav>
 <!-- END OF NAVBAR     -->
+
 
 <!-- Media panel -->
 <!--<div class="container d-flex justify-content-center mediacontainer flavoursContainer">-->
