--- a/moneyCat.html
+++ b/moneyCat.html
@@ -63,7 +63,6 @@
 <!--<body style="background: linear-gradient(to left, #00AAFF, #00FF6c)";>-->
 
 
-
 <!-- Navbar -->
 <nav class="fixed-left navbar navbar-expand-lg navbar-dark bg-dark ">
   <!-- Container wrapper -->
@@ -75,7 +74,7 @@
     </a>
 
     <a class="navbar-brand me-2" href="/home.html">
-      PHOTONs
+      PHOTONS
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -127,6 +126,7 @@
         <li class="nav-item">
           <a class="nav-link" href="aboutme.html">about me</a>
         </li>
+
       </ul>
 
 
@@ -158,10 +158,13 @@
           <!--                            <button class="btn-link btn" style="text-decoration: none; color:#00b1ae">logout</button>-->
           <!--                        </form>-->
           <!--                    </li>-->
+          <li class="nav-item">
+            <a class="nav-link" href="blog.html" style="color:#00b1ae">blog</a>
+          </li>
+          <li>
+            <a class="nav-link" id="clock" style="color:#00b1ae">01:20am</a>
+          </li>
         </ul>
-
-
-
       </div>
     </div>
     <!-- Collapsible wrapper -->
@@ -169,6 +172,7 @@
   <!-- Container wrapper -->
 </nav>
 <!-- END OF NAVBAR     -->
+
 
 
 
