--- a/calc.html
+++ b/calc.html
@@ -65,7 +65,7 @@
         </a>
 
         <a class="navbar-brand me-2" href="home.html">
-            PHOTONs
+            PHOTONS
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
