--- a/coffee.html
+++ b/coffee.html
@@ -117,9 +117,9 @@
 
     /*/!***************** change font sizes*/
 </style>
-<body>
-<!-- NAV BAR -->
 
+
+<body>
 
 <!-- Navbar -->
 <nav class="fixed-left navbar navbar-expand-lg navbar-dark bg-dark ">
@@ -132,7 +132,7 @@
         </a>
 
         <a class="navbar-brand me-2" href="/home.html">
-            PHOTONs
+            PHOTONS
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -184,6 +184,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="aboutme.html">about me</a>
                 </li>
+
             </ul>
 
 
@@ -215,10 +216,13 @@
                     <!--                            <button class="btn-link btn" style="text-decoration: none; color:#00b1ae">logout</button>-->
                     <!--                        </form>-->
                     <!--                    </li>-->
+                    <li class="nav-item">
+                        <a class="nav-link" href="blog.html" style="color:#00b1ae">blog</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" id="clock" style="color:#00b1ae">01:20am</a>
+                    </li>
                 </ul>
-
-
-
             </div>
         </div>
         <!-- Collapsible wrapper -->
@@ -226,6 +230,8 @@
     <!-- Container wrapper -->
 </nav>
 <!-- END OF NAVBAR     -->
+
+
 
 <!--&lt;!&ndash; Media panel &ndash;&gt;-->
 <!--<div class="container d-flex justify-content-center mediacontainer flavoursContainer">-->
