--- a/flickarchive.html
+++ b/flickarchive.html
@@ -66,7 +66,6 @@
     }
 </style>
 
-
 <!-- Navbar -->
 <nav class="fixed-left navbar navbar-expand-lg navbar-dark bg-dark ">
     <!-- Container wrapper -->
@@ -178,6 +177,7 @@
 <!-- END OF NAVBAR     -->
 
 
+
 <!-- Media panel -->
 <!--<div class="container d-flex justify-content-center mediacontainer ">-->
 <!--    <img src="img/photonlife.png">-->
@@ -272,17 +272,12 @@
 
 
 
-
-
-
-
-
-
-
-<!-- updated master scripts  -->
-
 <!--&lt;!&ndash; Latest compiled JavaScript &ndash;&gt;-->
-<!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>-->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
+
+
+
 
 <!-- jQuery library -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
